# midiverb_emulator

./: .gitignore  Makefile  README.md  TESTS.md  all-effects-test.c  all-effects.h  args.h  dasp16.h  decompiled-midifex-float.h  decompiled-midifex.h  decompiled-midiverb-float.h  decompiled-midiverb.h  decompiled-midiverb2-float.h  decompiled-midiverb2.h  disasm.py  diy-midiverb.c  lfo.h  midifex.txt  midiverb.c  midiverb.txt  names-midifex.h  names-midiverb.h  names-midiverb2.h  rom.h  utils.h  wav.h
.github/workflows/: build.yml
MidiverbPlugin/: CMakeLists.txt
MidiverbPlugin/Source/: Effects.h  Lfo.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: conftest.py  requirements.txt  test_clipping.py  test_decompiled_vs_emulated.py  test_defeat.py  test_harmonics.py
web-demo/: decompiled-midifex.js  decompiled-midiverb.js  decompiled-midiverb2.js  index.html  sound-generators.js
